change units to em to fix wrap issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,23 +123,25 @@ h1:before {
 }
 
 .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    align-items: flex-start;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  align-items: flex-start;
 }
 
  .flex-item-1 {
-    width: 30%;
-    height: 20em;
-    text-align: center;
-    flex-grow: <property unused>
-    flex-shrink: <property unused>
-    flex-basis: <property unused>
+  width: 21em;
+  height: 20em;
+  text-align: center;
 }
-/* - table css - */
+
+.flex-item-2 {
+  width: 22em;
+  height: 20em;
+  text-align: center;
+}
+
 .table-section {
   width: 100%;
   display: flex;
